--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -1,17 +1,17 @@
 /*Romix GTK Theme by Rohith Madhavan*/
 
 /* default color scheme */
-@define-color bg_color #d4d4d4;
+@define-color bg_color #ededed;
 @define-color fg_color #2c2c2c;
 @define-color base_color #f7f7f7;
 @define-color text_color #2c2c2c;
 @define-color selected_bg_color #4169e1;
 @define-color selected_fg_color #f7f7f7;
 @define-color tooltip_bg_color #2c2c2c;
-@define-color tooltip_fg_color #d4d4d4;
+@define-color tooltip_fg_color #ededed;
 
 /* dark color scheme */
-@define-color dark_bg_color #d4d4d4;
+@define-color dark_bg_color #ededed;
 @define-color dark_fg_color #2c2c2c;
 
 /* colormap actually used by the theme, to be overridden in other css files */
